<resources>
    <string name="app_name">49erSense</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_wan_to_log_out">Are you sure you wan to log out?</string>
    <string name="locks">Locks</string>
    <string name="garage_doors">Garage Doors</string>
    <string name="alarms">Alarms</string>
    <string name="video_feeds">Video Feeds</string>
    <string name="motion_sensors">Motion Sensors</string>
    <string name="add_device">Add Device</string>
    <string name="remove_device">Remove Device</string>
    <string name="welcome_to_49ersense">Welcome to 49erSense</string>
</resources>
